--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -235,5 +235,8 @@
     "exposure_history": "Exposure History",
     "legal": "Legal",
     "report_issue": "Report an Issue"
+  },
+  "more": {
+    "select_language": "Select language"
   }
 }
