--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,7 @@
     "disabled": "Disabled",
     "done": "Done",
     "enabled": "Enabled",
+    "go_to_next_screen":"Go to next screen",
     "maybe_later": "Maybe later",
     "next": "Next",
     "no_thanks": "No thanks",
