--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -193,7 +193,11 @@
     "app_setup_incomplete_location_body": "{{applicationName}} requires Proximity Tracing, Bluetooth, and Location permissions to know when and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
-    "notification_body1": "You’ll receive notifications when you may have been in close proximity with someone who has reported testing positive for COVID-19.",
+    "please_read_the": "Please read the",
+    "privacy_policy": "Privacy Policy",
+    "eula": "End User Legal Agreement",
+    "terms_header_title": "Terms of use",
+    "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_header": "Get notified if you may have been exposed",
     "notification_subheader1": "When will I get notified?",
