Update fix button design and add option to dismiss alert

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,6 +42,7 @@
   },
   "common": {
     "alert": "Alert",
+    "back": "Back",
     "close": "Close",
     "continue": "Continue",
     "disabled": "Disabled",
