--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,10 +43,12 @@
   "common": {
     "alert": "Alert",
     "back": "Back",
+    "cancel": "Cancel",
     "close": "Close",
     "continue": "Continue",
     "disabled": "Disabled",
     "done": "Done",
+    "enable": "Enable",
     "enabled": "Enabled",
     "maybe_later": "Maybe later",
     "next": "Next",
@@ -108,14 +110,14 @@
       "today_to_three_days_ago": "Within the last 3 days"
     },
     "health_guidelines": {
-      "six_feet_apart": "Stay six feet apart",
+      "six_feet_apart": "Stay 6 feet apart",
       "stay_home": "Stay home when sick",
       "title": "Health Guidelines",
       "wash_your_hands": "Wash your hands often",
       "wear_a_mask": "Wear a mask"
     },
     "how_does_this_work": "How does this work?",
-    "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it encounters that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy. Date and duration of the encounter are recorded along with an estimate of how close the two phones may have been. When a person reports a positive diagnosis, their phone’s recent random IDs are flagged to anonymously notify others. No locations or personal info is shared.",
+    "how_does_this_work_para": "When Exposure Notifications are on, your phone uses Bluetooth to swap and save random number strings (called random IDs) from any phones it is in close proximity to that also have Exposure Notifications enabled. Random IDs won’t identify you personally to other users and change many times a day to protect your privacy.",
     "last_days": "Last 14 days",
     "learn_more": "Learn More",
     "no_exposure_reports": "No Exposure Reports",
@@ -125,10 +127,10 @@
     "review_guidance_from_ha": "Review guidance from {{healthAuthorityName}}",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
-    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you crossed paths with later receives a confirmed, positive diagnosis or test for COVID-19 and chooses to notify others"
+    "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close proximity with later receives a positive test for COVID-19 and chooses to notify others."
   },
   "home": {
-    "bluetooth_info_body": "Your phone detects other phones you encounter using Bluetooth Low Energy. This allows the app to keep track of your daily encounters anonymously, even when you don’t have the app open on your device.",
+    "bluetooth_info_body": "Your phone detects other phones you spend time in close proximity with using Bluetooth Low Energy. This allows the app to log your log daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth_info_header": "Bluetooth",
     "bluetooth": {
       "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
@@ -138,7 +140,7 @@
       "fix": "Fix",
       "proximity_tracing_header": "Proximity Tracing",
       "report_positive_result": "Report positive test result",
-      "share": "Share the app and help contain the outbreak",
+      "share": "Share the app and help protect yourself and others.",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Inactive",
       "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
@@ -174,7 +176,7 @@
   "onboarding": {
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
-    "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
+    "notification_body1": "You’ll receive notifications when you may have been in close proximity with someone who has reported testing positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_header": "Get notified if you may have been exposed",
     "notification_subheader1": "When will I get notified?",
@@ -182,39 +184,41 @@
     "notification_subheader3": "This app does not protect you from COVID-19 infection.",
     "protect_privacy_button": "How we protect your privacy",
     "protect_privacy": {
-      "body_1": "These codes do not contain any personal information and change every 10-20 minutes to protect your identity.",
-      "body_2": "Phones swap codes with other devices using Bluetooth Low Energy. This allows the app to keep track of your daily encounters anonymously, even when you don’t have it open on your device.",
-      "body_3": "After testing positive for COVID-19, users can share a passcode with {{applicationName}} to verify their diagnosis. If they do so, their phone's recent random codes are flagged and securely uploaded to the server. This verification process helps prevent false positive reports.",
-      "body_4": "Your {{applicationName}} app then compares the flagged codes to its own set of codes from your recent daily enocunters. This is how {{applicationName}} can identify if there's a chance you've been exposed to the virus.",
-      "body_5": "If there’s a match, the app will notify you and provide further guidance from your health department on how to keep yourself and the people around you safe.\nThis is how {{applicationName}} can help you stay informed about your health and keep your community safe, all without knowing who you are or where you've been.",
-      "header": "Here's how we protect your privacy",
-      "subheader_1": "When a user turns on Exposure Notifications, their phone is tagged with a frequently-changing, random code",
-      "subheader_2": "Phones with proximity tracing enabled swap codes with other devices they encounter",
-      "subheader_3": "Users who test positive can choose to  anonymously share their health status",
-      "subheader_4": "Each phone periodically pings the server for the list of flagged codes shared by positive users and looks for matches",
-      "subheader_5": "Users are informed if their app finds a positive match with a flagged code"
+      "body_1": "These IDs do not contain any personal information and change every 10-20 minutes to protect your identity.",
+      "body_2": "Phones swap random IDs with other devices using Bluetooth Low Energy. This allows {{applicationName}} to keep track of your daily encounters anonymously, even when you don’t have it open on your device.",
+      "body_3": "After testing positive for COVID-19, users can share a passcode with {{applicationName}} to verify their diagnosis. Their phone’s recent random IDs are flagged and securely uploaded to the server. This verification process helps prevent false positive reports.",
+      "body_4": "If a flagged ID matches with an ID stored on your phone, this indicates you may have encountered someone who has tested positive for COVID-19. This is how {{applicationName}} can determine if you may have been exposed to the virus.",
+      "body_5": "If there’s a match, {{applicationName}} will notify you and provide further guidance from your health department.\n\nThis is how {{applicationName}} can empower you to make decisions about your health, and keep your community safe, all without knowing who you are or where you’ve been.",
+      "header": "How we protect your privacy",
+      "subheader_1": "When you turn on Proximity Tracing, your phone is tagged with frequently-changing, random IDs",
+      "subheader_2": "Phones with Proximity Tracing enabled swap IDs with other devices they encounter",
+      "subheader_3": "When a user tests positive, they can choose to anonymously share their health status",
+      "subheader_4": "Each phone periodically pings the server for the list of flagged IDs and looks for matches",
+      "subheader_5": "You will be notified if {{applicationName}} finds a positive match with a flagged ID"
     },
     "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
     "proximity_tracing_button": "Activate Proximity Tracing",
     "proximity_tracing_header": "Activate Proximity Tracing",
-    "proximity_tracing_subheader1": "How does Proximity Tracing work?",
+    "proximity_tracing_subheader1": "How does it work?",
     "proximity_tracing_subheader2": "Is my data secure?",
     "proximity_tracing_subheader3": "This app does not protect you from COVID-19 infection.",
+    "proximity_tracing_alert_header":"Enable Proximity Tracing from \"{{applicationName}}\"?",
+    "proximity_tracing_alert_body":"Your mobile device can securely collect and share random IDs with nearby devices. {{applicationName}} app can use these IDs to notify you if you’ve been exposed to COVID-19. The date, duration, and signal strength of an exposure will be shared with {{applicationName}}.",
     "screen_5_button": "Get started",
     "screen1_button": "How does it work?",
-    "screen1_header": "Together, we can contain the spread of COVID-19",
+    "screen1_header": "Together, we can slow the spread of COVID-19.",
     "screen1_image_label": "Two people high fiving each other",
-    "screen2_button": "How about privacy?",
-    "screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
+    "screen2_button": "Is my privacy protected?",
+    "screen2_header": "Your phone remembers other devices it meets, but it won’t identify you to anyone.",
     "screen2_image_label": "Two people on their phones",
-    "screen3_button": "What if I'm exposed?",
-    "screen3_header": "No personally identifiable information ever leaves your phone",
+    "screen3_button": "What if I’m exposed?",
+    "screen3_header": "No personally identifiable information ever leaves your phone.",
     "screen3_image_label": "A person in front of a locked phone",
     "screen4_button": "What if I get sick?",
-    "screen4_header": "The app will notify you if you may have been exposed to the coronavirus",
+    "screen4_header": "The app will notifiy you if you have may have been exposed to COVID-19.",
     "screen4_image_label": "A person getting a notification on their phone",
-    "screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
+    "screen5_header": "With the app, you can help slow the spread of COVID-19, protect others, and get help directly from health experts.",
     "screen5_image_label": "A person talking to a health expert virtually",
     "select_language": "Select Language",
     "step": "Step {{currentStep}} of {{totalSteps}}",
