--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -216,7 +216,7 @@
     "screen3_header": "No personally identifiable information ever leaves your phone.",
     "screen3_image_label": "A person in front of a locked phone",
     "screen4_button": "What if I get sick?",
-    "screen4_header": "The app will notifiy you if you have may have been exposed to COVID-19.",
+    "screen4_header": "The app will notify you if you have may have been exposed to COVID-19.",
     "screen4_image_label": "A person getting a notification on their phone",
     "screen5_header": "With the app, you can help slow the spread of COVID-19, protect others, and get help directly from health experts.",
     "screen5_image_label": "A person talking to a health expert virtually",
