--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -32,8 +32,10 @@
     "start_title": "Ответьте на вопросы о своих симптомах и истории болезни, чтобы узнать, что делать дальше с COVID-19"
   },
   "common": {
+    "cancel": "Отмена",
     "continue": "Продолжить",
     "done": "Готово",
+    "enable": "Включить",
     "next": "Готово",
     "something_went_wrong": "Что-то пошло не так",
     "start": "Начать"
@@ -44,10 +46,7 @@
     "complete_body_bluetooth": "Сообщая о своём статусе и анонимно уведомляя других, вы помогаете сдерживать распространение вируса и защищать других людей в вашем регионе.",
     "complete_title": "Спасибо, что заботитесь о безопасности окружающих!",
     "consent_button_title": "Я понимаю и даю согласие",
-    "publish_consent_body_bluetooth": "Поделиться своим положительным диагнозом можно по желанию и только с Вашего согласия.\n\nЕсли вы решите это сделать, вы помогаете другим людям в вашем сообществе принимать информированные решения о своем здоровье и играете свою роль в сдерживании распространения вируса.\n\nЕдинственной передаваемой информацией будет случайный набор номеров, которыми ваш телефон обменивался по Bluetooth с другими телефонами, находившимися поблизости в течение последних 14 дней, а также взвешенная оценка риска, основанная на том, когда у вас появились симптомы.",
-    "publish_consent_title_bluetooth": "Уведомить других в вашем регионе",
-    "start_body_bluetooth": "Анонимно уведомите других людей, с которыми вы могли оказаться поблизости, и помогите сдержать распространение вируса.",
-    "start_title_bluetooth": "Помогите сдержать распространение вируса и защитите других людей в вашем регионе, если у вас выявлен или заподозрен COVID-19."
+    "publish_consent_title_bluetooth": "Уведомить других в вашем регионе"
   },
   "home": {
     "bluetooth": {
@@ -57,13 +56,10 @@
     }
   },
   "label": {
-    "about_para": "Приложение PathCheck предоставляется Фондом PathCheck – некоммерческий организацией, которая стремится предоставить бесплатное ПО, чтобы помочь остановить распространение COVID-19 и защитить неприкосновенность личных данных. \n\nДля получения более подробной информации зайдите на ",
     "launch_enable_notif": "Включить уведомления",
     "launch_get_started": "Начать",
     "launch_screen1_header": "Добро пожаловать в PathCheck",
-    "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144",
-    "privacy_policy": "Политика конфиденциальности",
-    "unknown": "неизвестно"
+    "privacy_policy": "Политика конфиденциальности"
   },
   "navigation": {
     "home": "Главная страница",
