--- a/src/locales/es_419.json
+++ b/src/locales/es_419.json
@@ -14,8 +14,10 @@
     "start_cta": "Inicio"
   },
   "common": {
+    "cancel": "Cancelar",
     "continue": "Continuar",
     "done": "Hecho",
+    "enable": "Habilitar",
     "next": "Siguiente",
     "start": "Inicio"
   },
@@ -27,9 +29,7 @@
   "label": {
     "launch_enable_notif": "Permitir notificaciones",
     "launch_screen1_header": "Bienvenido a PathCheck",
-    "legal_page_address": "PathCheck Foundation\n58 Day Street \nBox 441621 \nSomerville, MA 02144",
-    "privacy_policy": "Política de privacidad",
-    "unknown": "desconocido"
+    "privacy_policy": "Política de privacidad"
   },
   "navigation": {
     "home": "Inicio",
