--- a/src/locales/ml_IN.json
+++ b/src/locales/ml_IN.json
@@ -12,6 +12,7 @@
     "next": "അടുത്തത്"
   },
   "common": {
+    "cancel": "റദ്ദാക്കുക",
     "continue": "തുടരുക",
     "done": "ചെയ്‌തു",
     "next": "ചെയ്‌തു"
@@ -19,7 +20,6 @@
   "label": {
     "launch_enable_notif": "അറിയിപ്പുകൾ പ്രവർത്തനക്ഷമമാക്കുക",
     "launch_get_started": "ആരംഭിക്കുക",
-    "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144",
     "privacy_policy": "സ്വകാര്യതാ നയം"
   },
   "screen_titles": {
