--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -7,12 +7,12 @@
     "next": "下一個"
   },
   "common": {
+    "cancel": "取消",
     "next": "下一個"
   },
   "label": {
     "launch_enable_notif": "開啟通知",
-    "launch_get_started": "開始",
-    "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144"
+    "launch_get_started": "開始"
   },
   "screen_titles": {
     "about": "關於",
