--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -82,6 +82,7 @@
     "enable_exposure_notifications_body": "You must enable exposure notifcations to report a positive test result.",
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
+      "invalid_format": "Invalid format",
       "invalid_code": "Try a different code",
       "unknown_code_verification_error": "Try a different code",
       "verification_code_used": "Verification code has already been used"
