--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -189,7 +189,7 @@
     "app_setup_complete_header": "App Setup Complete!",
     "app_setup_incomplete_header": "App Setup Incomplete",
     "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
-    "app_setup_incomplete_body": "{{applicationName}} is not active yet.\nProximity Tracing only works with other devices when enabled. You can turn off these notifications at any time.",
+    "app_setup_incomplete_body": "{{applicationName}} requires Proximity Tracing and Bluetooth permissions to know when  and where you have been exposed to COVID 19. You can authorize this in Settings.",
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
     "notification_body1": "You’ll receive notifications when you may have been in close proximity with someone who has reported testing positive for COVID-19.",
